--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ html,body {
 	overflow: hidden;
 	background-attachment: fixed;
 	background-position: center;
-	height: 75%;
+	height: 85%;
 	width: 90%;
 	position: absolute;
 	top: 10%;
@@ -99,6 +99,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
+	cursor: pointer;
 }
 
 .right_flower {
@@ -109,6 +110,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
+	cursor: pointer;
 }
 
 .nanakamado {
@@ -119,6 +121,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
+	cursor: pointer;
 }
 
 .name_na {
@@ -129,6 +132,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
+	cursor: pointer;
 }
 
 .name_nana {
@@ -139,6 +143,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
+	cursor: pointer;
 }
 
 .name_kamado {
@@ -149,6 +154,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
+	cursor: pointer;
 }
 
 .vegetable {
@@ -159,6 +165,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
+	cursor: pointer;
 }
 
 a {
@@ -170,8 +177,8 @@ div h1 {
 	margin: 0;
 	padding-bottom: 10px;
 	font-weight: bolder;
-	font-size: 24px;
-	font-family: Verdana;
+	font-size: 30px;
+	font-family: 'Monofett', cursive;
 	color: #504f4f;
 	text-shadow: 0px 2px 1px #bbbaba;
 };
@@ -257,7 +264,8 @@ H3 a {
 .title {
 	margin-top: 0px;
 	margin-bottom: 0px;
-	font-weight: bold;
+	font-family: 'Delius Swash Caps', cursive;
+	font-size: 20PX;
 }
 
 .title a {
@@ -483,7 +491,7 @@ H3 a {
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	background: #333;
-	font-size: 10px;
+	font-size: 15px;
 	text-decoration: none;
 	margin: 5px;
 	color: #fff;
@@ -491,7 +499,9 @@ H3 a {
 	top: -20px;
 	left: -20px;
 }
-#map {
-    width: 750px;
-    height: 400px;
+.map {
+    width: 65%;
+}
+.menu {
+    width: 95%;
 }
