--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ div h1 {
 	padding-bottom: 10px;
 	font-weight: bolder;
 	font-size: 30px;
-	font-family: 'Monofett', cursive;
+	font-family: 'Averia Gruesa Libre', cursive;
 	color: #504f4f;
 	text-shadow: 0px 2px 1px #bbbaba;
 };
@@ -264,7 +264,7 @@ H3 a {
 .title {
 	margin-top: 0px;
 	margin-bottom: 0px;
-	font-family: 'Delius Swash Caps', cursive;
+	font-family: 'Averia Gruesa Libre', cursive;
 	font-size: 20PX;
 }
 
