--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ html,body {
 }
 
 #contents {
-	background: #000;
 	background-attachment: fixed;
 	background-position: center;
 	height: 89%;
@@ -48,7 +47,6 @@ html,body {
 }
 
 #inner_contents {
-	background: #000;
 	overflow: hidden;
 	background-attachment: fixed;
 	background-position: center;
@@ -61,7 +59,6 @@ html,body {
 
 #main {
 	overflow: scroll;
-	background-image: url("../img/flower-back1071.jpg");
 	background-attachment: fixed;
 	background-position: center;
 	height: 150%;
@@ -72,10 +69,12 @@ html,body {
 
 #logo {
 	background-image: url("../img/logo.png");
-	background-attachment: fixed;
-	background-position: center;
 	background-repeat: no-repeat;
-	height: 100%;
+	height: 358px;
+	width: 601px;
+	display: block;
+	position: absolute;
+//	opacity: 0;
 }
 
 #close {
