--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,12 @@ html,body {
 	background-attachment: fixed;
 	background-position: center;
 	height: 100%;
-	position: absolute;
+	//position: absolute;
 	opacity: 0.5;
 	top: 0%;
 	left: 0%;
+	cursor: pointer;
+	display:none;
 }
 
 #front {
@@ -32,6 +34,7 @@ html,body {
 	top: 5%;
 	left: 10%;
 	opacity: 0.3;
+	display:none;
 }
 
 #contents {
@@ -43,6 +46,7 @@ html,body {
 	top: 5.5%;
 	left: 10.5%;
 	opacity: 0.9;
+	display:none;
 }
 
 #inner_contents {
@@ -130,7 +134,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
-	cursor: pointer;
+	//cursor: pointer;
 }
 
 .name_nana {
@@ -141,7 +145,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
-	cursor: pointer;
+	//cursor: pointer;
 }
 
 .name_kamado {
@@ -152,7 +156,7 @@ html,body {
 	display: block;
 	position: absolute;
 	opacity: 0;
-	cursor: pointer;
+	//cursor: pointer;
 }
 
 .vegetable {
@@ -174,11 +178,11 @@ a {
 div h1 {
 	margin: 0;
 	padding-bottom: 10px;
-	font-weight: bolder;
-	font-size: 30px;
-	font-family: 'Averia Gruesa Libre', cursive;
+	//font-weight: bolder;
+	font-size: 25px;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 	color: #504f4f;
-	text-shadow: 0px 2px 1px #bbbaba;
+	//text-shadow: 0px 2px 1px #bbbaba;
 };
 h1 a {
 	color: #5D5D5D;
@@ -220,7 +224,7 @@ H3 a {
 }
 
 .description {
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 	font-weight: bold;
 	padding: 0px 10px 0px 0px;
 }
@@ -240,7 +244,7 @@ H3 a {
 .blog {
 	padding: 0px 5px 50px 5px;
 	text-align: left;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .blogbody {
@@ -255,15 +259,15 @@ H3 a {
 	margin-bottom: 0px;
 	padding: 12px 0px 25px 0px;
 	border-top: 1px solid #D3D3D3;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 	font-size: 10px;
 }
 
 .title {
 	margin-top: 0px;
 	margin-bottom: 0px;
-	font-family: 'Averia Gruesa Libre', cursive;
-	font-size: 20PX;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
+	font-size: 12PX;
 }
 
 .title a {
@@ -274,7 +278,7 @@ H3 a {
 	padding: 10px 0px 5px 0px;
 	margin-top: 0px;
 	line-height: 1.8em;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .posted {
@@ -282,7 +286,7 @@ H3 a {
 	margin-bottom: 5px;
 	padding: 15px 0px 3px 0px;
 	font-size: 10px;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .posted a {
@@ -320,7 +324,7 @@ H3 a {
 	text-align: center;
 	color: #5D5D5D;
 	font-size: 12px;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .calendarday {
@@ -328,7 +332,7 @@ H3 a {
 	margin-bottom: 10px;
 	color: #5D5D5D;
 	font-size: 10px;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .calendarday a {
@@ -339,7 +343,7 @@ H3 a {
 	padding: 4px 10px 4px 10px;
 	font-weight: bold;
 	background-color: #ECECEB;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .side {
@@ -347,7 +351,7 @@ H3 a {
 	padding: 3px 10px 10px 0px;
 	margin-bottom: 10px;
 	font-size: 10px;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .side a {
@@ -368,7 +372,7 @@ H3 a {
 	margin-right: 10px;
 	text-align: center;
 	font-size: 10px;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 #comments {
@@ -399,19 +403,19 @@ H3 a {
 .comments-head {
 	font-weight: bold;
 	margin: 0px;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .comments-body {
 	margin: 0px;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 .comments-post {
 	padding: 3px 0px 3px 0px;
 	font-size: 10px;
 	text-align: right;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 #trackback {
@@ -420,7 +424,7 @@ H3 a {
 	border: 1px dotted #666;
 	padding: 5px;
 	text-align: left;
-	font-family: Verdana;
+	font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
 #footer {
@@ -489,7 +493,7 @@ H3 a {
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	background: #333;
-	font-size: 15px;
+	font-size: 12px;
 	text-decoration: none;
 	margin: 5px;
 	color: #fff;
@@ -497,9 +501,24 @@ H3 a {
 	top: -20px;
 	left: -20px;
 }
+
 .map {
     width: 65%;
 }
+
 .menu {
     width: 95%;
+}
+
+div.form-group {
+	padding: 50px;
+}
+
+#access,
+#concept,
+#menu,
+#news,
+#menu3,
+#menu4 {
+	display: none;
 }
